# parser-nordstromrack-scrapy

./: Webshare 1000 proxies.txt  dev_env  generators.py  logs.json  main.py  nord-key.txt  out.json  product.json  proxy_manager.py  pyproject.toml  scrapy.cfg  settings.py  token_manager.py
nordstrom_rack_spiders/: items.py  middlewares.py  pipelines.py  settings.py
nordstrom_rack_spiders/spiders/: categories.py  products.py
schemas/: __init__.py  nordstorm_rack_page_schema.py  nordstrom_rack_variant_schema.py
